Harden Servant lifecycle and recovery contracts